--- a/Section3_Spatial_Dataviz.Rmd
+++ b/Section3_Spatial_Dataviz.Rmd
@@ -23,17 +23,17 @@ your name is `Uname`, and the folder is
 saved as `sdvwR` in the Desktop in Windows, use the following.
 
 ```{r, eval=FALSE}
-setwd("c:/Users/Uname/Desktop/sdvwR")
+setwd("C:/Users/Uname/Desktop/sdvwR")
 ```
 
 For this section we are going to use a map of the world to demonstrate some of the cartographic principles discussed. A world map is available from the Natural Earth website. The code below will download this and save it to your working directory. It is commented out because the data may already be on your system. Uncomment each new line (by deleting the `#` symbol) if you need to download and extract the data.
 
 ```{r, eval=FALSE}
-download.file(url="http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_admin_0_countries.zip", "ne_110m_admin_0_countries.zip", "auto") # download file
-unzip("ne_110m_admin_0_countries.zip", exdir = "data/")  # unzip to data folder
-file.remove("ne_110m_admin_0_countries.zip") # remove zip file
+#download.file(url="http://www.naturalearthdata.com/http//www.naturalearthdata.com/download/110m/cultural/ne_110m_admin_0_countries.zip", "ne_110m_admin_0_countries.zip", "auto") # download file
+#unzip("ne_110m_admin_0_countries.zip", exdir = "data/")  # unzip to data folder
+#file.remove("ne_110m_admin_0_countries.zip") # remove zip file
 ```
-Once downloaded we can then load the data into the R console. We have just downloaded a shapefile, which as Section XX explains, is not handled as a "standard" data object in R. 
+Once downloaded we can then load the data into the R console. 
 
 ```{r}
 wrld <- readOGR("data/", "ne_110m_admin_0_countries")
@@ -46,7 +46,7 @@ To see the first ten rows of attribute information assocuiated with each of the 
 head(wrld@data)[,1:5]
 ```
 
-You can see there are a lot of columns associated with this file. Although we will keep all of the them, we are only really interested in the population estimate ("pop_est") field. Before progressing it is is worth reprojecting the data in order that the population data can be seen better. The coordinate reference system of the wrld shapefile is currently WGS84. This the common latitude and longitude format that all spatial software packages understand. From a cartographic perspective the standard plots of this projection, of the kind produced above, are not suitable since they distort the shapes of those countries further from the equator. Instead the Robinson projection provides a good compromise between areal distortion and shape preservation. We therefore project it as follows.
+You can see there are a lot of columns associated with this file. Although we will keep all of the them, we are only really interested in the population estimate ("pop_est") field. Before progressing it is is worth reprojecting the data in order that the population data can be seen better. The coordinate reference system of the wrld shapefile is currently WGS84. This is the common latitude and longitude format that all spatial software packages understand. From a cartographic perspective the standard plots of this projection, of the kind produced above, are not suitable since they heavily distort the shapes of those countries further from the equator. Instead the Robinson projection provides a good compromise between areal distortion and shape preservation. We therefore project it as follows.
 
 ```{r}
 wrld.rob <- spTransform(wrld, CRS("+proj=robin"))
@@ -82,7 +82,7 @@ map+ scale_fill_continuous(breaks=)
  
 # Conforming to colour conventions
 
-Colour has an enormous impact on how people will percieve your graphic. "Readers" of a map come to it with a range of pre-conceptions about how the world looks. If the map's purpose is to clearly communicate data then it is often advisable to conform to conventions so as not to disorientate readers to ensure they can focus on the key messages contained in the data. A good example of this is the use of blue for bodies of water and green for landmass. The code example below generates two plots with our wrld.pop.f object. The first colours the land blue and the sea (in this case the background to the map) green and the second is more conventional. We use the "grid.arrange" function from the "gridExtra" package to display the maps side by side.
+Colour has an enormous impact on how people will percieve your graphic. "Readers" of a map come to it with a range of pre-conceptions about how the world looks. If the map's purpose is to clearly communicate data then it is often advisable to conform to conventions so as not to disorientate readers to ensure they can focus on the key messages contained in the data. A good example of this is the use of blue for bodies of water and green for landmasses. The code example below generates two plots with our wrld.pop.f object. The first colours the land blue and the sea (in this case the background to the map) green and the second is more conventional. We use the "grid.arrange" function from the "gridExtra" package to display the maps side by side.
 
 ```{r}
 map2<- ggplot(wrld.pop.f, aes(long, lat, group = group)) + coord_equal()
