Here is some of the animtion code.

--- a/Section4_Final_Example_Conclusions.Rmd
+++ b/Section4_Final_Example_Conclusions.Rmd
@@ -11,7 +11,7 @@ library(rgdal)
 ```{r}
 library(ggplot2)
 library(png)
-wrld <- readOGR(".", "ne_110m_admin_0_countries")
+wrld <- readOGR("data", "data/ne_110m_admin_0_countries")
 btitle<-readPNG("figure/brit_titles.png")
 compass<-readPNG("figure/windrose.png")
 earth<-readPNG("figure/earth_raster.png")
@@ -26,8 +26,8 @@ quiet<-list(xquiet, yquiet)
 ```
 
 ```{r}
-wrld.pop.f<-fortify(wrld, region="sov_a3")
-base<- ggplot(wrld.pop.f, aes(x = long, y = lat))
+wrld.f<-fortify(wrld, region="sov_a3")
+base<- ggplot(wrld.f, aes(x = long, y = lat))
 ```
 
 ```{r}
@@ -35,7 +35,7 @@ route<-c(geom_path(aes(long,lat,group=paste(bdata$trp, bdata$group.regroup, sep=
 ```
 
 ```{r}
-wrld<-c(geom_polygon(aes(group=group), size = 0.1, colour= "black", fill="#D6BF86", data=wrld.pop.f, alpha=1))
+wrld<-c(geom_polygon(aes(group=group), size = 0.1, colour= "black", fill="#D6BF86", data=wrld.f, alpha=1))
 ```
 
 ```{r}
@@ -47,6 +47,23 @@ base+route+wrld + theme(panel.background = element_rect(fill='#BAC4B9',colour='b
 base+annotation_raster(earth, xmin = -180, xmax = 180, ymin = -90, ymax = 90)+route+ theme(panel.background = element_rect(fill='#BAC4B9',colour='black')) +annotation_raster(btitle, xmin = 30, xmax = 140, ymin = 51, ymax = 87)+annotation_raster(compass, xmin = 65, xmax = 105, ymin = 25, ymax = 65)+ coord_equal()+quiet
 ```
 !!!change the colour of the routes to make them stand out more.
+
+Animating your plots
+
+```{r}
+ani.record(reset = TRUE)
+  for (i in unique(bdata$year))
+    {
+    route<-c(geom_path(aes(long,lat,group=paste(trp, group.regroup, sep=".")), colour="#0F3B5F", size=0.2, data= bdata[which(bdata$year==i),], alpha=0.5, lineend="round"))
+    print(base+route+wrld + theme(panel.background = element_rect(fill='#BAC4B9',colour='black')) +annotation_raster(btitle, xmin = 30, xmax = 140, ymin = 51, ymax = 87)+annotation_raster(compass, xmin = 65, xmax = 105, ymin = 25, ymax = 65)+ coord_equal()+quiet+ggtitle(i))
+ani.record()
+    dev.off()
+    }  
+```
+
+
+saveHTML(ani.replay(), img.name = "record_plot",outdir = getwd())
+
 
 Recap and Conclusions
 =====================
